--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
                  <button class="start">Set</button>
               </div>
           </div>
+          <div class="col">
+              <div class="p-3">
+                 <button class="cancel">Cancel</button>
+              </div>
+          </div>
       </div>
 
   </div>
