--- a/index.html
+++ b/index.html
@@ -98,15 +98,15 @@
               </div><br>
               <div class="row row-cols-1 g-2 g-lg-3">
                 <div class="col">
-                  <button class="p-3 bg-success reprendre">
-                  Start Over
-                  </button><br>
                   <button class="p-3 bg-success translate">
                  Translate
                   </button>
               </div>
             </div>
           </div>
+          <button class="p-3 bg-success reprendre">
+            Start Over
+            </button>
     <script src="index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
